Remove uses of SWTObservables
Use a newer version of Tycho and jarsigner.
Eliminate some warnings.

Change-Id: I0bf93a3413ee28c2c4e03d34db8275e2c867300a