@@ -21,7 +21,7 @@ import org.eclipse.core.databinding.observable.value.IValueChangeListener;
 import org.eclipse.core.databinding.observable.value.ValueChangeEvent;
 import org.eclipse.emf.ecore.EObject;
 import org.eclipse.emf.ecore.EStructuralFeature;
-import org.eclipse.jface.databinding.swt.SWTObservables;
+import org.eclipse.jface.databinding.swt.typed.WidgetProperties;
 import org.eclipse.osgi.util.NLS;
 import org.eclipse.swt.SWT;
 import org.eclipse.swt.events.VerifyEvent;
@@ -78,10 +78,10 @@ public class IntObjectEditor extends TextObjectEditor {
 
 		updateText();
 
-		IObservableValue textObserveTextObserveWidget = SWTObservables.observeText(text, SWT.Modify);
-		textObserveTextObserveWidget.addValueChangeListener(new IValueChangeListener() {
+		IObservableValue<String> textObserveTextObserveWidget = WidgetProperties.text(SWT.Modify).observe((Control) text);
+		textObserveTextObserveWidget.addValueChangeListener(new IValueChangeListener<String>() {
 			@Override
-			public void handleValueChange(ValueChangeEvent event) {
+			public void handleValueChange(ValueChangeEvent<? extends String> event) {
 
 				try {
 					final Long i = Long.parseLong(text.getText());
@@ -93,7 +93,6 @@ public class IntObjectEditor extends TextObjectEditor {
 				}
 			}
 
-			@SuppressWarnings("rawtypes")
 			private void setFeatureValue(final long i) {
 				getBusinessObjectDelegate().setValue(object, feature, Long.toString(i));
 			}
@@ -119,6 +118,6 @@ public class IntObjectEditor extends TextObjectEditor {
 			catch (Exception e){
 			}
 		}
-		return new Long(0);
+		return Long.valueOf(0);
 	}
 }
